--- a/app.json
+++ b/app.json
@@ -4,9 +4,9 @@
     "slug": "phel4-native-app",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./app/assets/icon.png",
+    "icon": "./assets/icon.png",
     "splash": {
-      "image": "./app/assets/splash.png",
+      "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -21,14 +21,12 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./app/assets/adaptive-icon.png",
+        "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       }
     },
     "web": {
-      "favicon": "./app/assets/favicon.png"
-    },
-    "description": "",
-    "githubUrl": "https://github.com/MrMaffi/phel4-native-app"
+      "favicon": "./assets/favicon.png"
+    }
   }
 }
