--- a/package.json
+++ b/package.json
@@ -8,19 +8,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo-google-fonts/nunito": "^0.1.0",
     "expo": "~40.0.0",
-    "expo-app-loading": "^1.0.1",
-    "expo-constants": "^9.3.5",
-    "expo-font": "~8.4.0",
     "expo-status-bar": "~1.0.3",
-    "formik": "^2.2.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-confirmation-code-field": "^6.5.1",
-    "react-native-web": "~0.13.12",
-    "yup": "^0.32.9"
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
