feat: Add notifications
To RegisterNavigator was added a new hook intended to ask for
notification permissions at the user.

All screens which contain form now, in addition to alerts, the user is
also notified with the help of local notifications, if necessary.

Closes: #84

--- a/app.json
+++ b/app.json
@@ -29,6 +29,9 @@
       "favicon": "./app/assets/favicon.png"
     },
     "description": "",
-    "githubUrl": "https://github.com/MrMaffi/phel4-native-app"
+    "githubUrl": "https://github.com/MrMaffi/phel4-native-app",
+    "notification": {
+      "iosDisplayInForeground": true
+    }
   }
 }
