--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-app-loading": "^1.0.1",
     "expo-constants": "^9.3.5",
     "expo-font": "~8.4.0",
+    "expo-permissions": "~10.0.0",
     "expo-status-bar": "~1.0.3",
     "formik": "^2.2.6",
     "react": "16.13.1",
